--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ button {
     </h1>
 
     <div class="buttons">
-        <button id="yesBtn">Yes 💍</button>
+       <a id="yesBtn" href="#" style="text-decoration:none;">
+    <button>Yes 💍</button>
+</a>
         <button id="noBtn">No 🙈</button>
     </div>
 </div>
