--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@ button {
 }
 
 #noBtn {
+    background: white;
+    color: #555;
+    border: 1px solid #ddd;
+    position: absolute;
+}
+
+#noBtn {
     background: #ddd;
     position: absolute;
 }
