--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ noBtn.addEventListener("touchstart", moveNoButton);
 // Yes button popup
 yesBtn.addEventListener("click", () => {
     const phoneNumber = "918237898386"; // your number
-    const message = "Yes, I'll be your Valentine ❤️";
+    const message = "Yes, I'll be your Valentine";
 
     const whatsappURL =
         "https://wa.me/" +
@@ -195,7 +195,7 @@ yesBtn.addEventListener("click", () => {
 
 yesBtn.addEventListener("click", () => {
     const phoneNumber = "918237898386"; // your number
-    const message = "Yes, I'll be your Valentine ❤️";
+    const message = "Yes, I'll be your Valentine";
 
     const whatsappURL =
         "https://wa.me/" +
